update API Like and Bookmark
